--- a/paisajes.html
+++ b/paisajes.html
@@ -16,7 +16,7 @@
                 <a href="retratos.html">Retratos</a>
             </div>
         </div>
-        <div class="principal">
+        <div class="galeria">
             <div clase="grilla">
                 <div class="fila">
                     <img src="https://picsum.photos/300/200?image=779" alt="" class="fotos">
