--- a/retratos.html
+++ b/retratos.html
@@ -16,7 +16,7 @@
                 <a href="#" class="link_actual">Retratos</a>
             </div>
         </div>
-        <div class="principal">
+        <div class="galeria">
             <div clase="grilla">
                 <div class="fila">
                     <img src="https://picsum.photos/300/200?image=996" alt="" class="fotos">
